--- a/trunk/sqlworkbench/src/language/wbstrings.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings.properties
@@ -702,6 +702,13 @@ ErrNoInsertVal=No value for this column!
 ErrNoCurrent4Macro=The macro uses the ${current_statement}$ parameter, but no text is selected!
 ErrNoMultiLine=Could not determine line ending for input file. Multi-line mode disabled!
 ErrNoAppend='-append=true' not supported for export type ''{0}''
+ErrObjectGrantsWrongParam=Parameters for WbObjectGrants are:\n\
+-tables        a comma separated list of table names for which the GRANT statements should be created.\n               \
+               The parameter can contain wildcards.\n\
+-outputDir     A directory into which one script for each table should be written.\n\
+-outputFile    The file name of the script file containing all DROP statements.\n\
+\n\
+If -outputDir is specified, -outputFile is ignored.
 ErrOnDisconnect=Error disconnecting
 ErrPkDefWrongParameter=Syntax is: WbDefinePk table=col1,col2
 ErrPkDefNoFile=No file specified for storing primary key definitions.\nPlease use either the -file parameter or define the default file in 'Tools->Options'
