--- a/trunk/sqlworkbench/src/language/wbstrings_de.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings_de.properties
@@ -720,6 +720,13 @@ ErrNoCurrent4Macro=Das Makro verwendet den Parameter ${current_statement}$, aber
 ErrNoMultiLine=Das verwendete Format f\u00fcr ein Zeilenende (Windows, Unix) konnte nicht ermittelt werden. Der Multi-line Modus wurde deaktiviert.
 ErrNoAppend=F\u00fcr den Exporttyp ''{0}'' wird '-append=true' nicht unterst\u00fctzt.
 ErrOnDisconnect=Fehler beim Beenden der Verbindung
+ErrObjectGrantsWrongParam=Zul\u00e4ssige Parameter f\u00fcr WbObjectGrants sind:\n\
+-tables        Eine (Komma separierte) Liste von Tabellenanmen f\u00fcr die GRANT Befehle erstellt werden sollen\n               \
+               Der Parameter darf Wildcards enthalten.\n\
+-outputDir     Ein Ausgabeverzeichnis in welches eine Datei pro Tabellen geschrieben werden soll.\n\
+-outputFile    Der Dateiname in den alle DROP Befehle geschrieben werden sollen.\n\
+\n\
+Wenn -outputDir angegeben ist, so wird -outputFile ignoriert.
 ErrPkDefNoFile=Es wurde keine Datei mit Prim\u00e4rschl\u00fcssel-Definitionen festgelegt.\nBitte verwenden Sie den -file Parameter oder legen Sie die Datei unter 'Tools->Options' fest
 ErrPkDefWrongParameter=Syntax ist: WbDefinePk table=col1,col2
 ErrExecNoParm=Aufruf mit: WbSysExec programm\n\
