--- a/sqlworkbench/src/language/wbstrings_de.properties
+++ b/sqlworkbench/src/language/wbstrings_de.properties
@@ -366,6 +366,7 @@ d_LblWbCallInNewTab=<html>Erstelle einen neuen Editor-Tab und f\u00fcge ein WbCa
 d_LblWbCallInTab=<html>\u00dcberschreibe den Text im gew\u00e4hlten Editor-Tab mit einem WbCall Statement f\u00fcr die ausgew\u00e4hlte Prozedur<br>\nDr\u00fccken Sie die <tt>%control%</tt> Taste, um das Statement am Ende anzuf\u00fcgen.</html>
 d_LblWheelScrLines=<html>Die Anzahl der Zeilen die beim Drehen des Mausrades ge-scrolled werden<br>(Es wird die Einstellung des Betriebssystems verwendet wenn kein Wert angegeben ist)</html>
 d_LblWordWrap=Wortumbruch (ein/aus)
+d_LblWkspDefDir=Das Standardverzeichnis in dem SQL Skripte gesucht werden.
 d_MnuTxtAbout=Anzeige der Programmversion
 d_MnuTxtAddExplorerPanel=\u00d6ffnet einen neuen DbExplorer als Tab
 d_MnuTxtAddMacro=Erzeugt ein Macro auf Basis des selektierten Textes
