--- a/sqlworkbench/src/language/wbstrings.properties
+++ b/sqlworkbench/src/language/wbstrings.properties
@@ -366,6 +366,7 @@ d_LblUseStmtInCurLine=<html>When this option is enabled, the current <b>line</b>
 d_LblWarnChgResultSet=Show a confirmation before discarding result sets with changes
 d_LblWheelScrLines=<html>The number of lines to scroll in the editor when turning the mouse wheel<br>(Leave empty to use the operating system defaults)</html>
 d_LblWordWrap=Toggle word wrap mode
+d_LblWkspDefDir=The default directory for running SQL scripts
 d_MnuTxtAbout=Display version information
 d_MnuTxtAddExplorerPanel=Add a new DbExplorer tab
 d_MnuTxtAddMacro=Create a macro from the currently selected text
