--- a/trunk/sqlworkbench/src/language/wbstrings.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings.properties
@@ -2460,7 +2460,7 @@ MsgSchemaReporterMySQLRemarksWarning=To view table comments, the property 'useIn
 MsgSchemaReportTablesWritten={0,number,#} {0,choice,0#objects|1#object|2#objects} written to {1}
 MsgScriptCancelled=Script execution cancelled.
 MsgScriptExecTime=Total script execution time:
-MsgScriptStatementError=Statement {0,number,#} of {1,number,#} did not execute successfully.
+MsgScriptStatementError=Statement {0,number,#}{1,choice,-1#|0#|0< of '{1,number,#}'} did not execute successfully.
 MsgScriptErrorLabel=The error was:
 MsgSelectColumns=Please select the columns to be included
 MsgSelectColumnsWindowTitle=Select Columns
