--- a/trunk/sqlworkbench/src/language/wbstrings_de.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings_de.properties
@@ -2432,7 +2432,7 @@ MsgSchemaReporterMySQLRemarksWarning=Um Kommentare f\u00fcr Tabellen und Spalten
 MsgSchemaReportTablesWritten={0,number,#} Objekt(e) wurden nach {1} geschrieben
 MsgScriptCancelled=Skriptausf\u00fchrung abgebrochen
 MsgScriptExecTime=Gesamtzeit f\u00fcr das Skript:
-MsgScriptStatementError=Befehl {0,number,#} von {1,number,#} konnte nicht ausgef\u00fchrt werden.
+MsgScriptStatementError=Befehl {0,number,#}{1,choice,-1#|0#|0< von '{1,number,#}'} konnte nicht ausgef\u00fchrt werden.
 MsgScriptErrorLabel=Die Fehlermeldung ist:
 MsgSearchedTables=Durchsuchte Tabellen:
 MsgGrepSourceFinished={0,number,#} Objekt(e) wurden durchsucht, {1,number,#} Objekt(e) enthielt(en) den Suchbegriff.
