--- a/trunk/sqlworkbench/src/language/wbstrings.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings.properties
@@ -1712,6 +1712,7 @@ LblProceed=Proceed
 LblProfileQuickFilter=Quickfilter for profiles
 LblProfileQuickFilterFocus=Set focus to quick filter
 LblProfilesLocation=Connection profiles: {0}
+LblProfileFiles=Files in: {0}
 LblPrompUsername=Prompt for username
 LblQueryTimeout=Timeout:
 LblQuoteChar=Quote character
@@ -2736,6 +2737,7 @@ TxtSearchingDriver=Searching for JDBC driver...
 TxtSelectDriver=Please select one driver
 TxtSearchingLnF=Searching for Look & Feel...
 TxtSelectLnF=Please select a Look & Feel
+TxtSelectProfileStorage=Select file for the new profile
 TxtSearchTables=Search table data
 TxtSelectColor=Select color
 TxtSelectValue=Select value
