--- a/trunk/sqlworkbench/src/language/wbstrings.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings.properties
@@ -1712,7 +1712,8 @@ LblProceed=Proceed
 LblProfileQuickFilter=Quickfilter for profiles
 LblProfileQuickFilterFocus=Set focus to quick filter
 LblProfilesLocation=Connection profiles: {0}
-LblProfileFiles=Files in: {0}
+LblProfileFiles1=Connection profiles are loaded from multiple files.
+LblProfileFiles2=Choose one of the following files to store the new profile:
 LblPrompUsername=Prompt for username
 LblQueryTimeout=Timeout:
 LblQuoteChar=Quote character
@@ -2737,7 +2738,7 @@ TxtSearchingDriver=Searching for JDBC driver...
 TxtSelectDriver=Please select one driver
 TxtSearchingLnF=Searching for Look & Feel...
 TxtSelectLnF=Please select a Look & Feel
-TxtSelectProfileStorage=Select file for the new profile
+TxtSelectProfileStorage=Select file
 TxtSearchTables=Search table data
 TxtSelectColor=Select color
 TxtSelectValue=Select value
