--- a/trunk/sqlworkbench/src/language/wbstrings_de.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings_de.properties
@@ -1691,7 +1691,8 @@ LblprinterFont=Druckerschrift
 LblProfileQuickFilter=Filter f\u00fcr Verbindungsprofile
 LblProfileQuickFilterFocus=Eingebafocus im Filter
 LblProfilesLocation=Verbindungsprofile: {0}
-LblProfileFiles=Dateien in: {0}
+LblProfileFiles1=Die Profile wurden aus mehreren Dateien geladen.
+LblProfileFiles2=W\u00e4hlen Sie die Datei, in der das neue Profil gespeichert werden soll:
 LblPrompUsername=Nach Benutzernamen fragen
 LblProceed=Fortfahren
 LblRefAllLevel=Alle Ebenen anzeigen
@@ -2713,7 +2714,7 @@ TxtSelectDriver=Bitte w\u00e4hlen Sie einen Treiber aus
 TxtSelectValue=Wert ausw\u00e4hlen
 TxtSearchingLnF=Suche Look & Feel...
 TxtSelectLnF=Bitte w\u00e4hlen Sie ein Look & Feel aus
-TxtSelectProfileStorage=Datei f\u00fcr neues Profil ausw\u00e4hlen
+TxtSelectProfileStorage=Datei ausw\u00e4hlen
 TxtSearchTables=Tabellen durchsuchen
 TxtSelectColor=Farbe ausw\u00e4hlen
 TxtSequenceCol=Spalte {0} ist mit der Sequence {1} assoziiert.
