--- a/trunk/sqlworkbench/src/language/wbstrings.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings.properties
@@ -305,8 +305,8 @@ d_LblShowSynTarget=Display details about the referenced objects for SYNONYMS ins
 d_LblSpaceAfterComma=<html>Add a space after commas in <tt>IN</tt> lists</html>
 d_LblSshConfig=Configure a SSH tunnel to be used
 d_LblSshHost=The remote host to establish the SSH tunnel
-d_LblSshUser=The username to log into the SSH host
-d_LblSshPwd=<html>The password  to log into the SSH host.<br>Leave empty to be prompted for the password</html>
+d_LblSshUser=The username to log into the SSH host.
+d_LblSshPwd=<html>The password  to log into the SSH host.<br>If a key file is used, this is the passphrase of the private key.<br>Leave empty to be prompted for the password</html>
 d_LblSshLocalPort=The local port to be used for the tunnel. If empty (or 0) a port will be chosen automatically
 d_LblSshDbPort=The port to be used for remote end of the tunnel.
 d_LblSshDbHostname=The name of the database server as seen on the SSH host.
