--- a/trunk/sqlworkbench/src/language/wbstrings_de.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings_de.properties
@@ -306,7 +306,7 @@ d_LblSpaceAfterComma=<html>Leerzeichen nach einem Komma in einer <tt>IN</tt> Lis
 d_LblSshConfig=Einrichten eines SSH Tunnels
 d_LblSshHost=Der Rechner \u00fcber den der SSH Tunnel angelegt werden soll
 d_LblSshUser=Der Benutzername f\u00fcr den Login auf dem SSH Rechner
-d_LblSshPwd=<html>Das Passwort f\u00fcr die SSH Verbindung.<br>Falls dies leer ist, werden Sie nach dem Password gefragt</html>
+d_LblSshPwd=<html>Das Passwort f\u00fcr die SSH Verbindung.<br>Wird ein SSH Schl\u00fcssel verwendet, die Passphrase f\u00fcr den SSH Schl\u00fcssel.<br>Falls dies leer ist, werden Sie nach dem Password gefragt</html>
 d_LblSshLocalPort=Die lokale Portnummer die f\u00fcr den Tunnel verwendet werden soll. Falls dies leer ist, wird automtisch eine Nummer ausgw\u00e4hlt.
 d_LblSshPort=Die Portnummer f\u00fcr die SSH Verbindung zum SSH Host (Wenn nicht angegeben ist, wird der Port 22 verwendet)
 d_LblSshRewriteUrl=Wenn dies aktiviert ist, wird die JDBC URL so umgeschrieben, dass sie den lokalen Tunnel verwendet.
