--- a/sqlworkbench/src/language/wbstrings.properties
+++ b/sqlworkbench/src/language/wbstrings.properties
@@ -2363,7 +2363,7 @@ MsgImpTblMultipleTypes=Multiple data types have been detected for column "{0}": 
 MsgImpTblNoType=No data type could be determined for column "{0}"
 MsgInFile=In file: {0}
 MsgInsertSeq=Required INSERT sequence:
-MsgInputPwdWindowTitle=Please enter the password for the connection
+MsgInputPwdWindowTitle=Enter password for: {0}
 MsgInputSshPwd=Please enter the SSH password
 MsgInputSshPassPhrase=Please enter the passphrase for the SSH key
 MsgInputPwd=Password:
@@ -2630,7 +2630,7 @@ TxtEmptyMacroName=NewMacro
 TxtEmptyProfileName=New profile
 TxtEnterNewTableName=Enter name for new table
 TxtEnterStmtIndex=Statement to execute
-TxtEnterLogin=Enter login information
+TxtEnterLogin=Login information for {0}
 TxtError=Error
 TxtErrorRowCount=Error occurred during row count retrieval
 TxtFeedbackMail=In order to make finding the cause of a problem easier, please attach the complete (really: the complete) logfile to this email.\n\
