--- a/sqlworkbench/src/language/wbstrings_de.properties
+++ b/sqlworkbench/src/language/wbstrings_de.properties
@@ -2339,8 +2339,8 @@ MsgImpTooManyError=Es sind mehr Fehler aufgetreten als angezeigt werden k\u00f6n
 MsgImpTblMultipleTypes=Es wurden mehrere Datentypen f\u00fcr die Spalte "{0}" ermittelt: {1}
 MsgImpTblNoType=Es konnte kein Datentyp f\u00fcr die Spalte "{0}" ermittelt werden
 MsgInFile=In Datei: {0}
-MsgInputPwdWindowTitle=Bitte geben Sie das Kennwort f\u00fcr die Verbindung an
-MsgInputSshPwd=Bitte geben Sie das SSS Kennwort ein
+MsgInputPwdWindowTitle=Kennwort f\u00fcr {0}
+MsgInputSshPwd=Bitte geben Sie das SSH Kennwort ein
 MsgInputSshPassPhrase=Bitte geben Sie die Passphrase f\u00fcr den SSH Schl\u00fcssel ein
 MsgInputPwd=Kennwort:
 MsgInsertSeq=Erforderliche Reihenfolge der INSERT Befehle:
@@ -2612,7 +2612,7 @@ TxtEmptyMacroName=Neues Makro
 TxtEmptyProfileName=Neues Profil
 TxtEnterNewTableName=Bitte Namen f\u00fcr die neue Tabelle eingeben
 TxtEnterStmtIndex=Index des Befehls zum Ausf\u00fchren
-TxtEnterLogin=Anmeldedaten eingeben
+TxtEnterLogin=Anmeldedaten f\u00fcr {0}
 TxtError=Fehler
 TxtErrorRowCount=Fehler beim Ermitteln der Anzahl der Datens\u00e4tze
 TxtFileFilterHtml=HTML-Dateien (*.html)
