--- a/sqlworkbench/src/language/wbstrings.properties
+++ b/sqlworkbench/src/language/wbstrings.properties
@@ -675,7 +675,7 @@ ErrHelpFileNotFound=<html>The help file <b>{0}</b> was not found in the director
 ErrIllegalVariableName=The name '%varname%' is not a legal variable name!
 ErrWrongEncoding=Unsupported encoding {0}!.
 ErrImgNotSupp=Image type not supported!
-ErrLoadingWorkspace=The following error occurred when loading the workspace:\n'%error%'\nDo you want to create a new workspace?
+ErrLoadingWorkspace=The following error occurred when loading the workspace:\n{0}
 ErrLoadWkspBusy=A workspace can not be loaded while a statement is running
 ErrLogNoMemSuccess=The statement executed successfully.
 ErrLogNoMemError=An error occurred during statement execution.
