--- a/trunk/sqlworkbench/src/language/wbstrings_de.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings_de.properties
@@ -708,7 +708,7 @@ ErrInvalidNumber={0} ist keine zul\u00e4ssige Zahl
 ErrInvalidPSParameterValue=Der Wert "%value%" kann nicht zu dem Datentyp %type% konvertiert werden
 ErrInvalidInput=<html><b>{0}</b> ist ung\u00fcltig:<br><br><tt>{1}</tt></html>
 ErrInvalidBlend=Der Mischwert muss zwischen 0 und 256 liegen.
-ErrLoadingWorkspace=Der folgende Fehler trat beim Laden des Workspace auf:\n'%error%'\nM\u00f6chten Sie einen neuen Workspace erstellen?
+ErrLoadingWorkspace=Der folgende Fehler trat beim Laden des Workspace auf:\n{0}
 ErrLoadWkspBusy=Ein Workspace kann nicht geladen werden solange ein SQL Befehl l\u00e4uft
 ErrLogNoMemSuccess=Befehl erfolgreich ausgef\u00fchrt.
 ErrLogNoMemError=Beim Ausf\u00fchren des Befehls trat ein Fehler auf.
