--- a/sqlworkbench/src/language/wbstrings_de.properties
+++ b/sqlworkbench/src/language/wbstrings_de.properties
@@ -757,7 +757,7 @@ ErrGenInsertWrongParam=Zul\u00e4ssige Parameter f\u00fcr WbGenerateInsert:\n\
 -tables        Eine (Komma separierte) Liste von Tabellenanmen f\u00fcr die die INSERT Reihenfolge ermittelt werden soll\n               \
                Der Parameter darf Wildcards enthalten.\n\
 -fullInsert    wenn true, dann werden vollst\u00e4ndige INSERT Befehle erzeugt, nicht nur die korrekt Reihenfolge der Tabellen
-ErrNoCommand=Es wurde kein SQL Befehle gefunden. Der Grund k\u00f6nnen nicht korrekt geschlossene Anf\u00fchrungszeichen sein. Bitte \u00fcberpr\u00fcfen Sie Ihr SQL.\nFalls dies nicht auf falsche Anf\u00fchrungszeichen zur\u00fcckzuf\u00fchren ist, bitte melden Sie dies an support@sql-workbench.net unter Angabe des kompletten Inhalts des Editors sowie der Position des Cursors.
+ErrNoCommand=Es wurde kein SQL Befehle gefunden. Der Grund k\u00f6nnen nicht korrekt geschlossene Anf\u00fchrungszeichen sein. Bitte \u00fcberpr\u00fcfen Sie Ihr SQL.\nFalls dies nicht auf falsche Anf\u00fchrungszeichen zur\u00fcckzuf\u00fchren ist, bitte melden Sie dies an support@sql-workbench.eu unter Angabe des kompletten Inhalts des Editors sowie der Position des Cursors.
 ErrNoColumnsRetrieved=Die Spalten f\u00fcr die Tabelle [%table%] konnten nicht gelesen werden.
 ErrRowImportError=Die Zeile %row% (%data%) konnte nicht importiert werden. \nM\u00f6chten Sie weitermachen?
 ErrSavingFile=Fehler beim Speichern der Datei!
@@ -1706,7 +1706,7 @@ LblOptNever=Nie
 LblOptAuto=Automatisch
 LblOptPrompt=Nachfragen
 LblRldBehaviour=Neu laden
-LblReadingVersion=Ermittle Versionen auf http://www.sql-workbench.net ...
+LblReadingVersion=Ermittle Versionen auf http://www.sql-workbench.eu ...
 LblFilterWhileType=Beim Tippen filtern
 LblRememberDbExpSort=Sortierung merken
 LblRememberDbExpColOrder=Spaltenreihenfolge merken
@@ -1900,7 +1900,7 @@ LblVariableValue=Wert
 LblVersionNewDevAvailable=Ein neues Development Build ist verf\u00fcgbar
 LblVersionNewStableAvailable=Eine neue Version ist verf\u00fcgbar
 LblVersionReadError=Fehler beim Ermitteln der aktuellen Version
-LblVersionsAvailable=Versionen auf http://www.sql-workbench.net
+LblVersionsAvailable=Versionen auf http://www.sql-workbench.eu
 LblVersionUpToDate=Sie verwenden die aktuellste Version
 LblWordWrap=Wortumbruch
 LblWarnChgResultSet=Warnung, wenn ge\u00e4nderten Daten verworfen werden
