--- a/trunk/sqlworkbench/src/language/wbstrings.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings.properties
@@ -717,7 +717,7 @@ ErrManualNotFound=<html>The PDF manual <b>{0}</b> was not found in:<br>{1}</html
 ErrReadingVarDefFile=File %file% could not be loaded:
 ErrReadingVarSql=Variable value could not be read using: %sql%
 ErrRollbackTableData=An error occurred when rolling back the changes.\n{0}
-ErrNoCommand=No SQL command found. This can be caused by un-balanced quote characters. Please check your statement.\nIf this is not caused by unclosed quotes, please report this (providing the exact contents of the editor and the selection) to support@sql-workbench.net
+ErrNoCommand=No SQL command found. This can be caused by un-balanced quote characters. Please check your statement.\nIf this is not caused by unclosed quotes, please report this (providing the exact contents of the editor and the selection) to support@sql-workbench.eu
 ErrNoColumnsRetrieved=Columns for [%table%] could not be retrieved!
 ErrRowImportError=The row %row% (%data%) could not be imported correctly.\nDo you want to continue?
 ErrSavingFile=An error occurred when trying to save the file!
@@ -1728,7 +1728,7 @@ LblRldBehaviour=Reload files
 LblRefAllLevel=Retrieve all levels
 LblRefreshIntv=Refresh interval
 LblReset=Reset to default
-LblReadingVersion=Retrieving versions from http://www.sql-workbench.net ...
+LblReadingVersion=Retrieving versions from http://www.sql-workbench.eu ...
 LblRememberDbExpSort=Remember sort column
 LblRememberDbExpColOrder=Remember column order
 LblRememberObjectType=Remember object type
@@ -1922,7 +1922,7 @@ LblVariableValue=Value
 LblVersionNewDevAvailable=A new development build is available
 LblVersionNewStableAvailable=A new stable release is available
 LblVersionReadError=Could not retrieve version information
-LblVersionsAvailable=Versions at http://www.sql-workbench.net
+LblVersionsAvailable=Versions at http://www.sql-workbench.eu
 LblVersionUpToDate=You are using the most recent version
 LblWordWrap=Word wrap
 LblWheelScrLines=Wheel scroll lines
