--- a/trunk/sqlworkbench/src/language/wbstrings_de.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings_de.properties
@@ -73,6 +73,7 @@ d_LblColorLiteral=Farbe f\u00fcr Zeichenketten ('Arthur')
 d_LblColorQuotedIds=<html>Farbe f\u00fcr Bezeichner in Anf\u00fchrungszeigen (<tt>"some_column"</tt>)</html>
 d_LblColorOperator=Farbe f\u00fcr SQL Operatoren (JOIN, ...)
 d_LblColorDatatype=Farbe f\u00fcr Datentypen
+d_LblColTableAsPrefix=Zeigt den Tabellenname als Pr\u00e4fix des Spaltennamens an
 d_LblConsolidateLog=Es wird nur eine Zusammenfassung der Meldungen \u00fcber die Ausf\u00fchrung angezeigt.
 d_LblCopyProfile=Kopieren des selektierten Profils
 d_LblCopyInfo=Kopiert die angezeigte Information in die Zwischenablage
@@ -184,6 +185,7 @@ d_LblIncludeNullInInsert=<html>Spalten die den Wert NULL enthalten werden bei <t
 d_LblInclFilter=Ist diese Option aktiviert, werden ausschlie\u00dflich Objekte mit den definierten Namen angezeigt. Ansonsten werden diese Namen ausgefiltert.
 d_LblInclTypeInHeader=Den Datentyp der Spalte zusammen mit dem Spaltennamen in der Kopfzeile zeigen
 d_LblInclCommtInHeader=Den Kommentar der Spalte in der Kopfzeile anzeigen.
+d_LblInclTableInHeader=<html>Zeige den zu der Spalte geh\u00f6renden Namen der Tabelle an.<br>Dies funktioniert <b>nur</b> wenn der JDBC Treiber dies unterst\u00fctzt.</html>
 d_LblInfoColor=Hintergrundfarbe f\u00fcr die Anzeige der aktuellen Verbindung
 d_LblInsIgnoreId=Identity und Auto-Increment Spalten werden beim Generieren von INSERT Statements nicht ber\u00fccksichtigt
 d_LblIntLineEnding=Das Zeilenende welches innerhalb von SQL Statements an den Server geschickt wird.
@@ -1358,6 +1360,7 @@ LblColorOperator=SQL Operatoren
 LblColorQuotedIds=Bezeichner in Anf\u00fchrungszeichen
 LblColorDatatype=Datentypen
 LblColors=Farben
+LblColTableAsPrefix=Tabellenname als Pr\u00e4fix
 LblCommaAfterLineBreak=Komma nach dem Zeilenumbruch
 LblCommit=Commit
 LblCommitEachTableDelete=COMMIT nach jeder Tabelle
