--- a/sqlworkbench/src/language/wbstrings.properties
+++ b/sqlworkbench/src/language/wbstrings.properties
@@ -56,6 +56,8 @@ d_LblColorLiteral=Color for string literal ('Arthur')
 d_LblColorQuotedIds=<html>Color for quoted identifiers (<tt>"some_column"</tt>)
 d_LblColorOperator=Color for SQL operators (JOIN, ...)
 d_LblColorDatatype=Color for datatypes
+d_LblColTableAsPrefix=Show the column's table as a prefix to the column name
+d_LblColNameComment=<html>Add the column name as a comment in the <tt>VALUES</tt> part of <tt>INSERT</tt> statements</html>
 d_LblCompletionSortCols=<html>If this is enabled, columns are sorted alphabetically in the popup.<br>If not, they are listed in the order as they are defined in the database</html>
 d_LblCompletionPartialMatch=<html>Match the typed values in the quicksearch anywhere in the object name.<br>If this is not enabled, the object name must start with the entered search value.</html>
 d_LblCompletionFilterSearch=Only show those entries that match the entered values in the quick search
@@ -172,7 +174,8 @@ d_LblHideWarn=Do not display warnings returned by the driver
 d_LblIcon=<html>Define an icon that is used for the main window.<br>The image format must be <tt>PNG</tt> or <tt>GIF</tt> and the size should be 16x16 pixel</html>
 d_LblInclFilter=If this option is checked, only those objects matching the names are shown. Otherwise those names are hidden
 d_LblInclTypeInHeader=Include data type in result header
-d_LblInclCommtInHeader=Include columns remarks in result header (requires retrieval of column remarks)
+d_LblInclCommtInHeader=Include the column's remarks in result header (requires retrieval of column remarks)
+d_LblInclTableInHeader=<html>Include the column's remarks in result header.<br>This <b>only</b> works if the JDBC driver supports this.</html>
 d_LblIdleScriptTime=<html>The time the connection should be idle before sending the defined statement<br>Value is milliseconds. Append 's' or 'm' to define seconds or minutes (e.g. 30s, 5m)</html>
 d_LblIgnoreIdentity=Do not include identity/autoincrement columns when inserting into the target table
 d_LblIgnoreDropErrors=Ignore errors caused by DROP commands and continue SQL execution
@@ -315,7 +318,6 @@ d_LblSshKeyFile=The private key file to be used for authentication. If specified
 d_LblSshRewriteUrl=Assume the JDBC URL is a URL valid on the SSH host. If enabled, the URL JDBC URL will be changed to use the local tunnel.
 d_LblSshUseAgent=Use a running SSH agent (Pageant in Windows, ssh-agent on Linux) for authentication.
 d_LblSshAgentNotAvailable=<html>The necessary libraries to support SSH agents are not available<br>Please copy <tt>jna.jar</tt> and <tt>jna-platform.jar</tt> into the same directory where <tt>sqlworkbench.jar</tt> is located.</html>
-d_LblColNameComment=<html>Add the column name as a comment in the <tt>VALUES</tt> part of <tt>INSERT</tt> statements</html>
 d_LblSysDba=Connect using the role "SYSDBA"
 d_LblCommaAfterLineBreak=Add the comma after line breaks
 d_LblSpaceAfterLineBreakComma=Add a space after a comma with line break
@@ -1377,6 +1379,7 @@ LblColorQuotedIds=Quoted identifiers
 LblColors=Colors
 LblColorOperator=SQL Operators
 LblColorDatatype=Datatypes
+LblColTableAsPrefix=Show as column prefix
 LblColNameComment=Column name comment for INSERT statements
 LblCommaAfterLineBreak=Comma after line break
 LblCommit=Commit
@@ -1618,6 +1621,7 @@ LblIncFkTables=Add missing tables
 LblIncludeHeaderColWidth=Adjust to column headers
 LblInclTypeInHeader=Show data type in header
 LblInclCommtInHeader=Show remarks in header
+LblInclTableInHeader=Show table name in header
 LblIncludeNullInInsert=Include NULL columns in INSERTs
 LblInfoColor=Info Background
 LblInsIgnoreId=Ignore identity and autoincrement columns for INSERTs
