--- a/sqlworkbench/src/language/wbstrings_de.properties
+++ b/sqlworkbench/src/language/wbstrings_de.properties
@@ -1584,6 +1584,7 @@ LblIdleScriptTime=Zeit ohne Aktivit\u00e4t
 LblInclFilter=Nur diese Objekte anzeigen
 LblInclCommtInHeader=Spaltenkommentare anzeigen
 LblInclTypeInHeader=Datentyp anzeigen
+LblInclTableInHeader=Tabelle anzeigen
 LblIgnoreThis=Diesen Fehler ignorieren
 LblIgnoreAllErr=Alle Fehler ignorieren
 LblIgnore=Ignorieren
