--- a/sqlworkbench/src/language/wbstrings.properties
+++ b/sqlworkbench/src/language/wbstrings.properties
@@ -1867,6 +1867,8 @@ LblSqlFmtColNumIns=INSERT
 LblSqlFmtColNumUpd=UPDATE
 LblSqlGeneration=SQL Generation
 LblSqlExecOptions=SQL Execution
+LblSshGlobalCfg=SSH Hosts
+LblSshCfgName=Configuration
 LblSshConfig=SSH
 LblSshHost=SSH hostname
 LblSshUser=Username
