--- a/trunk/sqlworkbench/src/language/wbstrings_de.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings_de.properties
@@ -1808,6 +1808,8 @@ LblSettingsGeneral=Allgemein
 LblSettingsWinTitle=Fenstertitel
 LblSettingsLocation=Konfigdatei: {0}
 LblSettingsTabControl=Editor Reiter
+LblSshGlobalCfg=SSH Verbindungen
+LblSshCfgName=Konfiguration
 LblSshConfig=SSH
 LblSshHost=SSH Host
 LblSshUser=Benutzername
