--- a/trunk/sqlworkbench/src/language/wbstrings_de.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings_de.properties
@@ -1275,6 +1275,7 @@ ErrModeWrongArgs=Syntax ist: WbMode [reset|normal|readonly|confirm|status]
 ErrNoAutoTrace=Kein Zugriff auf die Statistik Views m\u00f6glich. Bitte stellen Sie sicher das die Rolle PLUSTRACE vergeben wurde.
 ErrMcrNameReq=Bitte geben Sie einen Namen f\u00fcr das Macro ein.
 ErrMcrNmNoSpace=Der Name darf keine Leerzeichen enthalten.
+ErrOnlyMonoFont=Es sind nur Festbreitenschriften erlaubt
 LblActivateLnf=Aktivieren
 LblAddSep=Trenner einf\u00fcgen
 LblAltDelimit=Alternativer Trenner
