--- a/sqlworkbench/src/language/wbstrings.properties
+++ b/sqlworkbench/src/language/wbstrings.properties
@@ -1296,6 +1296,7 @@ ErrViewNotFound=View "{0}" not found.
 ErrNoAutoTrace=Statistic views are not accessible. Please grant the PLUSTRACE role.
 ErrMcrNameReq=A name is required
 ErrMcrNmNoSpace=An expandable macro's name may not contain spaces
+ErrOnlyMonoFont=Only monospaced fonts allowed
 LblActivateLnf=Make current
 LblAddSep=Add separator
 LblAlignNum=Number alignment
