--- a/trunk/sqlworkbench/src/language/wbstrings_de.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings_de.properties
@@ -2198,7 +2198,7 @@ MsgCancelling=Abbruch...
 MsgCancellingCopy=Kopieren wird abgebrochen...
 MsgCancellingStmt=Der aktuelle Befehl wird abgebrochen...
 MsgCancelRowCount=Ermittlung der Datens\u00e4tze wird abgebrochen...
-MsgCatalogChanged=%catalogterm% wurde ge\u00e4ndert zu %newcatalog%
+MsgCatalogChanged={0} wurde ge\u00e4ndert zu {1}
 MsgCheckingUpdateTable=\u00dcberpr\u00fcfe Tabelle die ge\u00e4ndert werden soll...
 MsgClipInvalid=Der Inhalt der Zwischenablage kann nicht importiert werden.
 MsgClipFormat=Bitte definieren Sie das Format des Textes in der Zwischenablage.
@@ -2533,6 +2533,7 @@ TxtConnReadOnly=<html>Die Verbindung ist auf Read-Only gestellt.<br>Zum \u00c4nd
 TxtConnReadOnlyOff=<html>Read-Only Einschr\u00e4nkung wurde tempor\u00e4r abgeschaltet<br>Zum \u00c4ndern doppelklicken</html>
 TxtCopyOf=Kopie von
 TxtCreatePK=Definiere Prim\u00e4rschl\u00fcssel
+TxtDatabase=Datenbank
 TxtDbExplorerData=Daten
 TxtDbExplorerFkColumns=Referenziert
 TxtDbExplorerIndexes=Indizes
