--- a/sqlworkbench/src/language/wbstrings.properties
+++ b/sqlworkbench/src/language/wbstrings.properties
@@ -2222,7 +2222,7 @@ MsgCancelling=Cancelling...
 MsgCancellingCopy=Cancelling copy...
 MsgCancellingStmt=Trying to cancel the current statement...
 MsgCancelRowCount=Cancelling row count retrieval...
-MsgCatalogChanged=%catalogterm% changed to %newcatalog%
+MsgCatalogChanged={0} changed to {1}
 MsgCheckingUpdateTable=Checking table to be updated...
 MsgClipInvalid=The content of the clipboard cannot be imported.
 MsgClipFormat=Please specify the format of the clipboard text.
@@ -2557,6 +2557,7 @@ TxtConnReadOnlyOff=<html>Read only mode is temporarily disabled<br>Double click 
 TxtCopyOf=Copy of
 TxtCopyright=Copyright 2002-2018, Thomas Kellerer
 TxtCreatePK=Create Primary Key
+TxtDatabase=Database
 TxtDbExplorerData=Data
 TxtDbExplorerFkColumns=References
 TxtDbExplorerIndexes=Indexes
