--- a/trunk/sqlworkbench/src/language/wbstrings.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings.properties
@@ -1679,6 +1679,7 @@ LblMinColsize=Min. column width
 LblMoveProfiles=Move to selected group
 LblMultiLineLimit=Minimum defined column size
 LblMultiLineCols=Multi-line columns
+LblMultiRowInsert=Multi-row inserts
 LblMultiWrapEdit=Wrap lines when editing
 LblMultiWrapRender=Wrap lines for display
 LblMsgLogFont=Message font
