--- a/sqlworkbench/src/language/wbstrings.properties
+++ b/sqlworkbench/src/language/wbstrings.properties
@@ -2646,19 +2646,19 @@ TxtFeedbackMail=In order to make finding the cause of a problem easier, please a
 The logfile is located at: {0}
 TxtFeedbackMailConInfo=Information about the current database connection:\n\n\
 {0}
-TxtFileFilterHtml=HTML Files (*.html)
-TxtFileFilterSql=SQL Scripts (*.sql)
-TxtFileFilterSqlUpdate=SQL Update (*.sql)
-TxtFileFilterSqlInsDel=SQL INSERT/DELETE (*.sql)
-TxtFileFilterText=Text files (*.txt, *.csv)
-TxtFileFilterWksp=Workspace files (*.wksp)
-TxtFileFilterXml=XML files (*.xml)
-TxtFileFilterXls=Excel files (*.xls)
-TxtFileFilterXlsX=Excel 2007 files (*.xlsx)
-TxtFileFilterXlsM=Excel XML files (*.xml)
-TxtFileFilterOds=OpenDocument Spreadsheet (*.ods)
-TxtFileFilterJson=JSON (*.json)
-TxtFileFilterIcons=Icons (*.png, *.gif)
+TxtFileFilterHtml=HTML Files
+TxtFileFilterSql=SQL Scripts
+TxtFileFilterSqlUpdate=SQL Update
+TxtFileFilterSqlInsDel=SQL INSERT/DELETE
+TxtFileFilterText=Text files
+TxtFileFilterWksp=Workspace files
+TxtFileFilterXml=XML files
+TxtFileFilterXls=Excel files
+TxtFileFilterXlsX=Excel 2007 files
+TxtFileFilterXlsM=Excel XML files
+TxtFileFilterOds=OpenDocument Spreadsheet
+TxtFileFilterJson=JSON
+TxtFileFilterIcons=Icons
 TxtOdsName=OpenDocument
 TxtXlsName=Excel 97-2003
 TxtGetMacroNameWindowTitle=Enter macro name
