--- a/sqlworkbench/src/language/wbstrings_de.properties
+++ b/sqlworkbench/src/language/wbstrings_de.properties
@@ -2623,18 +2623,18 @@ TxtEnterStmtIndex=Index des Befehls zum Ausf\u00fchren
 TxtEnterLogin=Anmeldedaten f\u00fcr {0}
 TxtError=Fehler
 TxtErrorRowCount=Fehler beim Ermitteln der Anzahl der Datens\u00e4tze
-TxtFileFilterHtml=HTML-Dateien (*.html)
-TxtFileFilterSql=SQL-Dateien (*.sql)
-TxtFileFilterSqlUpdate=SQL Update (*.sql)
-TxtFileFilterSqlInsDel=SQL INSERT/DELETE (*.sql)
-TxtFileFilterText=Text Dateien (*.txt, *.csv)
-TxtFileFilterWksp=Workspace Dateien (*.wksp)
-TxtFileFilterXml=XML Dateien (*.xml)
-TxtFileFilterXls=Excel Dateien (*.xls)
-TxtFileFilterXlsX=Excel 2007 Dateien (*.xlsx)
-TxtFileFilterXlsM=Excel XML Dateien (*.xml)
-TxtFileFilterOds=OpenDocument Tabellendokument (*.ods)
-TxtFileFilterIcons=Icondateien (*.png, *.gif)
+TxtFileFilterHtml=HTML-Dateien
+TxtFileFilterSql=SQL-Dateien
+TxtFileFilterSqlUpdate=SQL Update
+TxtFileFilterSqlInsDel=SQL INSERT/DELETE
+TxtFileFilterText=Text Dateien
+TxtFileFilterWksp=Workspace Dateien
+TxtFileFilterXml=XML Dateien
+TxtFileFilterXls=Excel Dateien
+TxtFileFilterXlsX=Excel 2007 Dateien
+TxtFileFilterXlsM=Excel XML Dateien
+TxtFileFilterOds=OpenDocument Tabellendokument
+TxtFileFilterIcons=Icondateien
 TxtOdsName=OpenDocument
 TxtXlsName=Excel 97-2003
 TxtGetMacroNameWindowTitle=Bitte geben Sie den Makronamen ein
