--- a/trunk/sqlworkbench/src/language/wbstrings.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings.properties
@@ -65,6 +65,7 @@ d_LblCompletionCycle=Jump to the first entry when pressing the down arrow on the
 d_LblConfigureWarningThreshold=Configure the warning level threshold and automatic loading of data and rowcounts
 d_LblConfirmDbUpdates=Confirm execution of all statements that change the database.
 d_LblConfirmTabClose=Confirm the closing of editor tabs
+d_LblConfirmMultiTabClose=Confirm the closing of multiple editor tabs
 d_LblConnExtendedProps=Edit additional, driver specific connection properties
 d_LblConnPreventNoWhere=<html>If this option is enabled, <tt>UPDATE</tt> or <tt>DELETE</tt> statements without a <tt>WHERE</tt> clause are only executed after a confirmation.</html>
 d_LblConnTags=<html>Enter a comma separated list of tags for this connection profile<br>These will be used in the profile quickfilter to narrow down the list of profiles</html>
@@ -1403,6 +1404,7 @@ LblConfigureWarningThreshold=Settings
 LblConfigureWarningThresholdTitle=Configure data display
 LblConfirmDbUpdates=Confirm updates
 LblConfirmTabClose=Confirm tab close
+LblConfirmMultiTabClose=Confirm closing multiple tabs
 LblConnFilter=&Filter
 LblConnExtendedProps=Extended Properties
 LblConnScripts=Connect scripts
