--- a/sqlworkbench/src/language/wbstrings_de.properties
+++ b/sqlworkbench/src/language/wbstrings_de.properties
@@ -49,6 +49,7 @@ d_LblCollapseAll=Alle Gruppen einklappen
 d_LblConfigureWarningThreshold=Konfigurieren der Warnung bei zu vielen Daten und des automatischen Ladens der Daten
 d_LblConfirmDbUpdates=Best\u00e4tigung f\u00fcr alle Kommandos erzwingen, welche die Datenbank ver\u00e4ndern k\u00f6nnen.
 d_LblConfirmTabClose=Schlie\u00dfen von Editor-Tabs best\u00e4tigen
+d_LblConfirmMultiTabClose=Schlie\u00dfen von mehreren Editor-Tabs best\u00e4tigen
 d_LblConnExtendedProps=Zus\u00e4tzliche, treiberspezifische Einstellungen bearbeiten
 d_LblConnPreventNoWhere=<html>Wenn diese Option aktiviert ist, werden <tt>UPDATE</tt> oder <tt>DELETE</tt> Befehle ohne <tt>WHERE</tt> Klausel nur nach R\u00fcckfrage ausgef\u00fchrt.</html>
 d_LblConnReadOnly=Ignoriert alle Befehle die die Datenbank ver\u00e4ndern k\u00f6nnten
@@ -1382,6 +1383,7 @@ LblConfigureWarningThreshold=Einstellungen
 LblConfigureWarningThresholdTitle=Einstellungen
 LblConfirmDbUpdates=Best\u00e4tige Updates
 LblConfirmTabClose=Tab schlie\u00dfen best\u00e4tigen
+LblConfirmMultiTabClose=Schlie\u00dfen mehrerer Tabs best\u00e4tigen
 LblConnPreventNoWhere=Best\u00e4tige DML ohne WHERE
 LblConnInfo=Verbindungsinformation
 LblConnExtendedProps=Erweiterte Einstellungen
