--- a/sqlworkbench/src/language/wbstrings_de.properties
+++ b/sqlworkbench/src/language/wbstrings_de.properties
@@ -1815,6 +1815,8 @@ LblSettingsGeneral=Allgemein
 LblSettingsWinTitle=Fenstertitel
 LblSettingsLocation=Konfigdatei: {0}
 LblSettingsTabControl=Editor Reiter
+LblSshTunnel=Definition des SSH Tunnel
+LblSshConn=Verbindungsinformationen f\u00fcr den SSH Rechner
 LblSshGlobalCfg=SSH Verbindungen
 LblSshCfgName=Konfiguration
 LblSshConfig=SSH
