--- a/sqlworkbench/src/language/wbstrings.properties
+++ b/sqlworkbench/src/language/wbstrings.properties
@@ -2747,8 +2747,7 @@ TxtSchemCatFilterHelp=<html>Enter one item per line. If the "Show only these nam
 TxtSchemaList=List of schemas
 TxtScriptFinished=Script execution finished
 TxtScriptProcessFk=Processing foreign keys...
-TxtScriptStatementFinished1=Statement
-TxtScriptStatementFinished2=of {0} finished
+TxtScriptStatementFinished=Statement {0,number,#} of {1,number,#} finished
 TxtSearchFilter=Filtered results where any column {0}
 TxtSearchingTable=Searching table
 TxtSearchingDriver=Searching for JDBC driver...
