--- a/sqlworkbench/src/language/wbstrings_de.properties
+++ b/sqlworkbench/src/language/wbstrings_de.properties
@@ -849,12 +849,7 @@ Bitte kopieren Sie die Daten "simple-odf.jar, odfdom-java.jar, resolver.jar, ser
 ErrNoXLS=Die Unterst\u00fctzung f\u00fcr Excel Datieen ist nicht m\u00f6glich, da die Datei poi.jar nicht gefunden wurde.\n\
 Bitte kopieren sie poi.jar (Version 3.5 oder neuer) in das Verzeichnis in dem sich sqlworkbench.jar befindet.
 ErrNoXLSX=Die Unterst\u00fctzung f\u00fcr Excel 2007 nicht verf\u00fcgbar, vermutlich weil die OOXML Bibliotheken f\u00fcr POI nicht verf\u00fcgbar sind.\n\
-Bitte kopieren Sie die folgenden Dateien aus der POI Distribution in das Verzeichnis in dem sich sqlworkbench.jar befindet:\n\n\
- poi-ooxml.jar\n\
- dom4j-1.6.1.jar\n\
- geronimo-stax-api_1.0_spec-1.0.jar\n\
- ooxml-schemas-1.0.jar\n\
- xmlbeans-2.3.0.jar
+Bitte kopieren Sie die folgenden Dateien aus der POI Distribution in das "ext" Unterverzeichnis in dem sich sqlworkbench.jar befindet
 ErrExportFileRequired=Sie m\u00fcssen entweder -outputdir oder -file angeben!
 ErrExpWrongCtl=Ung\u00fcltiger Typ ''{0}'' f\u00fcr -formatFile angegeben.
 ErrExportInvalidEscapeRangeIgnored=Ung\u00fcltiger Escape-Bereich %value% wurde ignoriert. G\u00fcltige Bereiche sind: ctrl, 7bit, 8bit, extended
