--- a/sqlworkbench/src/language/wbstrings.properties
+++ b/sqlworkbench/src/language/wbstrings.properties
@@ -694,12 +694,7 @@ Please make sure that the files "simple-odf.jar, odfdom-java.jar, resolver.jar, 
 ErrNoXLS=Excel files are not supported because Apache POI is not available.\n\
 Please make sure that the file "poi.jar" (Version 3.5 or higher) is available in the same directory as sqlworkbench.jar.
 ErrNoXLSX=Excel 2007 files are not supported because the OOXML libraries for POI are not available.\n\
-Make sure the following files from the POI distribution are present in the directory where sqlworkbench.jar is located\n\n \
-poi-ooxml.jar\n \
-dom4j-1.6.1.jar\n \
-stax-api-1.0.1.jar\n \
-ooxml-schemas-1.0.jar\n \
-xmlbeans-2.3.0.jar
+Make sure the following files from the POI distribution are present in the "ext" sub-directory where sqlworkbench.jar is located.
 ErrNoSelection4Macro=The macro uses the ${selected_statement}$ or {$selected_text}$ parameter, but no text is selected!
 ErrNoInsertCol=No column for this value!
 ErrNoInsertVal=No value for this column!
