--- a/sqlworkbench/src/language/wbstrings.properties
+++ b/sqlworkbench/src/language/wbstrings.properties
@@ -1306,6 +1306,7 @@ LblAllowEditExecSQL=Allow editing while executing
 LblAlternateRowColor=Alternate row color
 LblAsIs=As is
 LblAssignShortcut=Assign
+LblAttachResult=Attach
 LblAutoAdvance=Auto advance to next statement
 LblAutoColWidth=Automatically adjust columns
 LblAutoLoad=Autoload
