--- a/sqlworkbench/src/language/wbstrings.properties
+++ b/sqlworkbench/src/language/wbstrings.properties
@@ -1906,6 +1906,7 @@ LblTableSelTextColor=Selected text color
 LblTabOrderLRU=Activate last used tab
 LblTabMessages=Messages
 LblTabResult=Result
+LblTabProcResult=Procedure result
 LblTabStatement=Statement
 LblTabWidth=Editor tab width
 LblTargetColumn=Target Column
