--- a/sqlworkbench/src/language/wbstrings_de.properties
+++ b/sqlworkbench/src/language/wbstrings_de.properties
@@ -1882,6 +1882,7 @@ LblTableSelBckColor=Hintergrund selektiert
 LblTableSelTextColor=Text selektiert
 LblTabMessages=Nachrichten
 LblTabResult=Resultat
+LblTabProcResult=Prozedurergebnis
 LblTabStatement=Statement
 LblTabWidth=Tabulator f\u00fcr Editor
 LblTabOrderLRU=Aktiviere letzten benutzten Tab
