--- a/sqlworkbench/src/language/wbstrings.properties
+++ b/sqlworkbench/src/language/wbstrings.properties
@@ -2347,6 +2347,10 @@ MsgExportCancelled=Export cancelled.
 MsgExportingData=Exporting data to
 MsgExportNumTables=%numtables% table(s) exported to %dir%
 MsgExportTableExported=%rows% row(s) from %tablename% written to %file%
+MsgExtDirWarning=<html>Starting with build 125, additional libraries are expected in the sub-directory <tt><b>ext</b></tt>.<br><br>\
+The following files in the directory <tt>{0}</tt>\
+<ul>{1}</ul>\
+should be moved to the directory <tt><b>{2}</b></tt></html>
 MsgExtFmtHelp=<html>The command line definition supports the placeholders <code>{0}</code> for the input file and <code>{1}</code> for the outputfile</html>
 MsgFeedbackDisabled=Execution feedback disabled
 MsgFeedbackEnabled=Execution feedback enabled
